--- a/css/style.css
+++ b/css/style.css
@@ -18,17 +18,18 @@ body {
   min-width: 1180px;
   margin: 0;
   padding: 0;
-  font-family: 'Gilroy', 'Open Sans';
+  font-family: 'Open Sans', 'Arial', sans-serif;
   font-size: 14px;
   line-height: 24px;
   font-weight: 400;
-
+  
   color: var(--main-black);
   background-color: var(--main-white);
 }
 
 a {
   text-decoration: none;
+  color: var(--main-black);
 }
 a:visited {
   color: var(--main-black);
@@ -38,20 +39,16 @@ img {
   max-width: 100%;
 }
 
-li {
-  list-style-type: none;
-}
-
-h2 {
-  font-family: 'Gilroy';
+h2.title-section {
+  font-family: 'Gilroy', 'Times New Roman', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 47px;
   line-height: 58px;
 }
 
-h4 {
-  font-family: Gilroy;
+h4.subtitle-section {
+  font-family: 'Gilroy', 'Times New Roman', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 16px;
@@ -59,6 +56,17 @@ h4 {
 
   letter-spacing: 0.1em;
   text-transform: uppercase;
+}
+
+ul.list-nav-main,
+ul.categories,
+ul.list-slider-button,
+ul.list-slider-text,
+ul.list-partner-companies,
+ul.delivery-companies,
+ul.list-nav-footer,
+ul.list-smm {
+  list-style-type: none;
 }
 
 .visually-hidden {
@@ -73,7 +81,7 @@ h4 {
 }
 
 .header {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 15px;
@@ -94,7 +102,7 @@ h4 {
 }
 
 .send-search {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 15px;
@@ -124,7 +132,7 @@ h4 {
 }
 
 .nav-main {
-  font-family: 'Gilroy';
+  font-family: 'Gilroy', 'Times New Roman', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
@@ -137,7 +145,7 @@ h4 {
 }
 
 .categories-menu {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 15px;
@@ -154,7 +162,7 @@ h4 {
 }
 
 .description-banner {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 15px;
@@ -162,7 +170,7 @@ h4 {
 }
 
 .a-link-second {
-  font-family: 'Gilroy';
+  font-family: 'Gilroy', 'Times New Roman', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
@@ -173,7 +181,7 @@ h4 {
 }
 
 .title-attr-banner {
-  font-family: 'Gilroy';
+  font-family: 'Gilroy', 'Times New Roman', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 36px;
@@ -183,7 +191,7 @@ h4 {
 }
 
 .description-attr-banner {
-  font-family: 'Gilroy';
+  font-family: 'Gilroy', 'Times New Roman', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 13px;
@@ -193,7 +201,7 @@ h4 {
 }
 
 .categories {
-  font-family: 'Gilroy';
+  font-family: 'Gilroy', 'Times New Roman', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
@@ -202,7 +210,7 @@ h4 {
 }
 
 .button-type-slider {
-  font-family: 'Gilroy';
+  font-family: 'Gilroy', 'Times New Roman', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
@@ -217,7 +225,7 @@ h4 {
 }
 
 .description-slider {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 15px;
@@ -228,7 +236,7 @@ h4 {
 
 .description-about-us,
 .description-contacts {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 15px;
@@ -236,7 +244,7 @@ h4 {
 }
 
 .delivery-companies {
-  font-family: 'Gilroy';
+  font-family: 'Gilroy', 'Times New Roman', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 16px;
@@ -244,7 +252,7 @@ h4 {
 }
 
 .label-modal-form {
-  font-family: 'Gilroy';
+  font-family: 'Gilroy', 'Times New Roman', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
@@ -252,7 +260,7 @@ h4 {
 }
 
 .input-style-form {
-  font-family: 'Gilroy';
+  font-family: 'Gilroy', 'Times New Roman', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -266,7 +274,7 @@ h4 {
 }
 
 .address {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 15px;
@@ -276,7 +284,7 @@ h4 {
 }
 
 .nav-list-footer {
-  font-family: 'Gilroy';
+  font-family: 'Gilroy', 'Times New Roman', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
@@ -292,7 +300,7 @@ h4 {
 }
 
 .footer-text-nav {
-  font-family: Open Sans;
+  font-family: 'Open Sans', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 15px;
@@ -305,7 +313,7 @@ h4 {
 /*Catalog*/
 
 .bread-crumbs {
-  font-family: Open Sans;
+  font-family: 'Open Sans', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 14px;
@@ -326,7 +334,7 @@ h4 {
 }
 
 .filter-title {
-  font-family: Gilroy;
+  font-family: 'Gilroy', 'Times New Roman', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 14px;
@@ -336,7 +344,7 @@ h4 {
 }
 
 .filter-range-text {
-  font-family: Gilroy;
+  font-family: 'Gilroy', 'Times New Roman', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 14px;
@@ -344,16 +352,16 @@ h4 {
 }
 
 .filter-text {
-  font-family: Open Sans;
+  font-family: 'Open Sans', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 14px;
   line-height: 19px;
-  /* identical to box height */
+
 }
 
 .sorting-catalog {
-  font-family: Open Sans;
+  font-family: 'Open Sans', 'Arial', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -372,12 +380,11 @@ h4 {
 }
 
 .link-add {
-  font-family: Open Sans;
+  font-family: 'Open Sans', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 13px;
   line-height: 18px;
-  /* identical to box height */
 
   letter-spacing: 0.1em;
 
@@ -394,7 +401,7 @@ h4 {
 }
 
 .name-card {
-  font-family: Gilroy;
+  font-family: 'Gilroy', 'Times New Roman', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
@@ -407,7 +414,7 @@ h4 {
 }
 
 .name-card-price {
-  font-family: Gilroy;
+  font-family: 'Gilroy', 'Times New Roman', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 16px;
@@ -416,7 +423,7 @@ h4 {
 }
 
 .nav-catalog {
-  font-family: Gilroy;
+  font-family: 'Gilroy', 'Times New Roman', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 16px;
